core-concepts/client.yml
kind: Pod
apiVersion: v1
metadata:
  name: client
  labels:
    run: client
spec:
  containers:
  - name: busybox
    image: busybox:1.34.0
    args:
    - sleep
    - "10000"
