core-concepts/mysqlpodmanifest.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-locked
spec:
  containers:
  - name: mysql
    image: mysql:8-debian
